tests/invalid/missing-comp-name.hcdf
<?xml version="1.0"?>
<hcdf version="1.0" name="missing-comp-name">
  <comp/>
</hcdf>
